rhz-260. fix the charts wrap issue

--- a/webapp/src/styles/_homepage.scss
+++ b/webapp/src/styles/_homepage.scss
@@ -5,20 +5,8 @@
   padding: 2px;
 
   .chart-panel {
-  //background-color: $rhz-background-color;
-  //padding: 2px;
-  //
-  //.chart-panel-content {
-  //  background-color: $rhz-chart-panel-color;
-  //  margin: 2px;
-  //  padding: 10px 16px;
-  //
-  //  .chart-button {
-  //    background-color: $rhz-button-bg-color;
-  //    color: $rhz-button-color;
-  //    text-transform: uppercase;
-  //  }
-  //}
+    list-style: none;
+    border: 2px solid #426281
 
     float: left;
     width: 33.33%;
